static/css/base.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Rubik+Distressed&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Chivo&family=Karla&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

.bg-grey {
    background-color: #d8d9dd;
}

/*----------------------------web-kit scroll bar styling */
::-webkit-scrollbar {
    width: .5vw;
    background-color:  #df9d85;
  }

  ::-webkit-scrollbar-track {
    border-radius: 5px;
  }

  ::-webkit-scrollbar-thumb {
    border-radius: 5px;
    background-color: #fff;
  }

  ::-webkit-scrollbar-thumb:hover {
    background-color:  #c04417;
  }
/* -----------------------navbar styling------------------------ *
/* new svg nav */

.menu {
    background-color: transparent;
    border: none;
    cursor: pointer;
    display: flex;
    padding: 0;
    z-index: 9999999999;
}

.offcanvas,body {
    height: 100vh !important;
    background: rgb(251, 197, 178);
    background: radial-gradient(circle, rgba(251, 197, 178, 1) 0%, rgba(255, 191, 191, 1) 45%, rgba(255, 235, 235, 1) 100%);
}


.line {
    fill: none;
    stroke: black;
    stroke-width: 6;
    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
        stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
}

.line1 {
    stroke-dasharray: 60 207;
    stroke-width: 6;
}

.line2 {
    stroke-dasharray: 60 60;
    stroke-width: 6;
}

.line3 {
    stroke-dasharray: 60 207;
    stroke-width: 6;
}

.opened .line1 {
    stroke-dasharray: 90 207;
    stroke-dashoffset: -134;
    stroke-width: 6;
}

.opened .line2 {
    stroke-dasharray: 1 60;
    stroke-dashoffset: -30;
    stroke-width: 6;
}

.opened .line3 {
    stroke-dasharray: 90 207;
    stroke-dashoffset: -134;
    stroke-width: 6;
}

/* -----------offcanvas flex style---------------------- */
.about-flex {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

.profile {
    height: 200px;
    width: 200px;
    background-color: black;
    border-radius: 100%;
    box-shadow: 3px 3px 3px #000;
}

.pro-img {
    width: 100%;
    border-radius: 100%;
}

.pro-links {
    color: black;
    transition: 400ms;
}

.pro-links:hover {
    color: white;
    transition: 400ms;
}

/* Log In page */
.allauth-form{
    height: 100vh;
}
.allauth-form button,
.allauth-form input[type='submit'],
.form-styling input[type='submit'],
.fancy-btn {
    font-weight: bold;
    font-family: 'Roboto Condensed', sans-serif;
    color: #fff !important;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #D90452 !important;
    border: 1px solid #D90452;
    padding: .398rem .75rem .355rem;
    font-size: 1.2rem;
    line-height: 1.5;
    border-radius: 0;
    box-shadow: 0 1px 3px 0 #F20505;
    -webkit-transition: box-shadow 150ms ease;
    transition: box-shadow 150ms ease;
    transition: 300ms ease;
}

.allauth-form button:hover,
.allauth-form input[type='submit']:hover,
.form-styling input[type='submit']:hover,
.fancy-btn:hover {
    color: #000 !important;
    background-color: #027333 !important;
    border: 1px solid #055a2a;
}

.login-header {
    color: green;
    font-size: 40px;
    font-family: 'karla', sans-serif;

}

.flex-container {
    background-color: whitesmoke;
    padding: 50px;
    margin: 150px;
    text-align: center;
    background-image: url("/static/img/hero.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 0.8;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    position: absolute;
    z-index: -1;
}

/* span {
    color: red;
} */

/* -------------------------------------------------Index */

.hero {
    height: 100vh;
    position: relative;
}

.hero-text {
    position: absolute;
    bottom: 65%;
    /* left: 15%; */
}

/* https://css-tricks.com/snippets/css/transparent-background-images/ */
.hero::after {
    content: "";
    background-image: url("/static/img/hero.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 0.8;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    position: absolute;
    z-index: -1;
}

.headding {
    font-family: 'Rubik Distressed', cursive, sans-serif;
    font-size: clamp(2.8rem, 2.5vw, 2.1rem) !important;
    color: rgb(19, 69, 131);
    margin: 50px;
    text-shadow: 2px 2px rgb(44, 40, 40);

}
/* ----------------------------wish list styling */
.dynamic-card {
    box-shadow: 2px 2px 3px #d68669;
}

.dynamic-card:hover {
    box-shadow: 2px 3px 4px #d66239;
}

.wish-image {
    transition: 1s;
}

.wish-image:hover {
    overflow: hidden;
    -webkit-transform: scale(1.02);
    -moz-transform: scale(1.02);
    -ms-transform: scale(1.02);
    -o-transform: scale(1.02);
    transform: scale(1.02);
}
/* --------------------------------friends page styling */
.profile-header{
    height: 40vh;
    position: relative;
}

/* https://css-tricks.com/snippets/css/transparent-background-images/ */
.profile-header::after {
    content: "";
    background-image: url("/static/img/hero.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 0.8;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    position: absolute;
    z-index: -1;
}
.profile-txt{
    position: absolute;
    bottom: 20px;
    right: 20px;
}
.profile-box{
    width: 200px;
    height: 200px;
    overflow: hidden;
    border-radius: 100%;
    border: 7px solid #fff
}
.profile-pic{
    height:100% ;
    width:100%;
}
.profile-edit{
    position: absolute;
    bottom: 5px;
    left: 6px;
}
/*  user follow-unfollow */
.follow-unfollow {
    color: hsl(0, 81%, 35%)
}

/* ---------------media styling for screen size mobile  */

@media (max-width: 991px) {
    .hero-text {
        bottom: 45%;
    }
    .hero::after {
        background-image: url("/static/img/hero-2.jpg");
    }
    .profile {
        height: 150px;
        width: 150px;
    }
}

